ingress-poc-backend.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: '3600s'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '3600s'
  name: ingress-morphingprojections-backend-storage
  namespace: default
spec:
  rules:
  - host: minikube.io
    http:
      paths:
      - path: /morphingprojections-backend(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: uniovi-avib-morphingprojections-backend-storage
            port:
              number: 8083
